--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ crate-type = ["cdylib"]
 [dependencies]
 pyo3 = { version = "0.24", features = ["extension-module", "macros"] }
 rosu-mods = { version = "0.3.0", default-features = false, features = ["serde"] }
-rosu-pp = { git = "https://github.com/ppy-sb/rosu-pp", features = ["sync"] }
+rosu-pp = { git = "https://github.com/GooGuTeam/rosu-pp", features = ["sync"] }
 serde = { version = "1.0.203" }
 
 [profile.release]
